Fixed config reinserting removed default values